# Synrix-Memory-Engine

./: .gitignore  CHANGELOG.md  README.md
docs/: ARCHITECTURE.md
python-sdk/: CONTRIBUTING.md  README.md  pyproject.toml  setup.py
python-sdk/examples/: README.md  assistant_memory_demo.py  auto_organization_demo.py  canonical_5min.py  codebase_indexer.py  first_lattice.py  init_example.py  practical_assistant.py  quickstart.py  rag_demo.py  rag_demo_kb.py  rag_simple_demo.py  robotics_quick_demo.py
python-sdk/synrix/: _download_binary.py  raw_backend.py  robotics.py  usage_report.py
python-sdk/synrix/examples/: tour.py
