[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "synrix"
version = "0.2.0"
description = "Local AI memory engine — O(k) retrieval, no embeddings, no cloud, one binary"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "RYJOX Technologies", email = "ryjoxtechnologies@gmail.com"}
]
maintainers = [
    {name = "RYJOX Technologies", email = "ryjoxtechnologies@gmail.com"}
]
keywords = [
    "ai-memory",
    "local-first",
    "edge-ai",
    "knowledge-graph",
    "semantic-search",
    "rag",
    "no-embeddings",
    "vector-database",
    "langchain",
    "qdrant-compatible"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

dependencies = [
    "requests>=2.28.0",
]

[project.optional-dependencies]
langchain = [
    "langchain>=0.1.0",
    "langchain-community>=0.1.0",
    "langchain-core>=0.1.0",
]
openai = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "pydantic>=2.0.0",
]
telemetry = [
    "psutil>=5.9.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
]
all = [
    "langchain>=0.1.0",
    "langchain-community>=0.1.0",
    "langchain-core>=0.1.0",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "pydantic>=2.0.0",
    "psutil>=5.9.0",
]

[project.urls]
Homepage = "https://github.com/RYJOX-Technologies/Synrix-Memory-Engine"
Documentation = "https://github.com/RYJOX-Technologies/Synrix-Memory-Engine#readme"
Repository = "https://github.com/RYJOX-Technologies/Synrix-Memory-Engine"
"Bug Tracker" = "https://github.com/RYJOX-Technologies/Synrix-Memory-Engine/issues"
Changelog = "https://github.com/RYJOX-Technologies/Synrix-Memory-Engine/releases"

[project.scripts]
synrix = "synrix.cli:main"
synrix-tour = "synrix.examples.tour:run_tour"

[tool.setuptools]
packages = {find = {}}

[tool.setuptools.package-data]
synrix = ["py.typed"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

